--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "bliss-ui",
+  "name": "challenger-deep-ui",
   "theme": "ui",
   "version": "0.6.0",
-  "description": "Ultra-minimalist theme.",
+  "description": "Ultra-minimalist theme to match the challenger-deep-syntax",
   "keywords": [
     "bliss",
     "monochrome",
     "ui",
     "theme",
     "ocean",
-    "spacegray"
+    "spacegray",
+    "challenger-deep"
   ],
-  "repository": "https://github.com/saadq/bliss-ui",
+  "repository": "https://github.com/PashanIrani/challenger-deep-ui.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
